Draft: Performance improvements for pages with many tags